<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MLKitActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.sandec.tensorflowlite.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/find_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_face" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/find_face_contour_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_text"
        app:layout_constraintRight_toLeftOf="@id/button_cloud_text" />

    <Button
        android:id="@+id/button_cloud_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/find_text_cloud_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_face"
        app:layout_constraintRight_toLeftOf="@id/button_run_custom_model" />

    <Button
        android:id="@+id/button_run_custom_model"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/find_objects_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_cloud_text"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>